--- a/styles/project_previews.css
+++ b/styles/project_previews.css
@@ -1,6 +1,6 @@
 /* Project preview stuff */
 
-.textsection {
+#pageContent {
     margin-left: 40px;
     margin-right: 40px;
 }
